--- a/app/static/users/login.css
+++ b/app/static/users/login.css
@@ -16,9 +16,19 @@ body {
     border-radius: 15px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     padding: 2rem;
-    width: 530px;
-    height: 674px;
+    /*width: 530px;*/
+    /*height: 674px;*/
     animation: fadeIn 0.5s ease-in-out;
+}
+
+@media (max-width: 425px) {
+    body {
+        background-color: #fff;
+    }
+
+    .login-card {
+        box-shadow: none;
+    }
 }
 
 .login-card h2 {
@@ -45,7 +55,6 @@ body {
 }
 
 .btn-primary {
-    width: 450px;
     height: 56px;
     border-radius: 8px;
     gap: 10px;
@@ -124,10 +133,16 @@ body {
     margin-right: 10px; /* Отступ справа */
     animation: blink 1.5s infinite; /* Анимация мерцания */
 }
+
 @keyframes blink {
-    0%, 50%, 100% { opacity: 1; }
-    25%, 75% { opacity: 0.5; }
+    0%, 50%, 100% {
+        opacity: 1;
+    }
+    25%, 75% {
+        opacity: 0.5;
+    }
 }
+
 /* Анимация появления */
 @keyframes fadeIn {
     from {
