--- a/app/report/templates/report/report.html
+++ b/app/report/templates/report/report.html
@@ -96,9 +96,25 @@
                         <div class="p-3">
                             {% for not_accessed in report_data.not_accessed %}
                                 <h5>{{ not_accessed.name }}</h5>
-                                <p><b>Причина: </b>{{ not_accessed.reason }}</p>
-                                <hr>
+                                <p>
+                                    <b>Количество посещений: </b>
+                                    <a href="{% url 'report:circle_history' not_accessed.id %}?date_start={{ date_start }}&date_end={{ date_end }}">{{ not_accessed.visits_count }}/{{ required_count }}</a>
+                                </p>
+                                <a href="{{ not_accessed.contract }}" class="btn btn-outline-primary">Договор</a>
+                                {% for cheque in not_accessed.cheques %}
+                                    <a href="{{ cheque.url }}" class="btn btn-outline-primary">Чек
+                                        за {{ cheque.month }}</a>
+                                {% endfor %}
+                                <h6 class="mt-3">Причины отказа:</h6>
+                                <ul>
+                                {% for reason in  not_accessed.reasons %}
+                                	<li>
+                                        {{ reason }}
+                                    </li>
+                                {% endfor %}
 
+                                </ul>
+                                <hr>
                             {% endfor %}
                         </div>
                     </div>
